chore(notification-service) Update to HTML templates using thymeleaf and restore https for auth0 redirections to succed